--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,6 +1,5 @@
-
 <div class="ancho-100">
-  <div class="formulario"> 
+  <div class="formulario">
     <label for="nombre"> nombre: </label>
     <input type="text" id="nombre" name="nombre" [(ngModel)]="nombre" />
     <br />
@@ -13,15 +12,52 @@
     <input type="number" id="telefono" name="telefono" [(ngModel)]="telefono" />
   </div>
   <button (click)="agregar()">agregar</button>
-
-  <app-vista
-    *ngFor="let elemento_arreglo of arregloTarjeta"
+  <!-- Desglozar ngFor
+     tarjeta = {
+      nom: this.nombre,
+      ape: this.apellido,
+      tel: this.telefono,
+    };
+    arregloTarjeta = [tarjeta1,tarjeta2,tarjeta3 , ... ]
+   For(int i=0 ; i < arregloTarjeta.length; i ++) {
+    elemento_arreglo = arregloTarjeta[i]
+   <app-vista
     [nombre_entrada]="elemento_arreglo.nom"
     [apellido_entrada]="elemento_arreglo.ape"
     [telefono_entrada]="elemento_arreglo.tel"
   >
   </app-vista>
+}-->
+  <div fxLayout="row" fxLayoutAlign="space-between">
+    <app-vista
+      *ngFor="let elemento_arreglo of arregloTarjeta"
+      [nombre_entrada]="elemento_arreglo.nom"
+      [apellido_entrada]="elemento_arreglo.ape"
+      [telefono_entrada]="elemento_arreglo.tel"
+    >
+    </app-vista>
+  </div>
 </div>
+
 <!-- <div>
   <app-tarea [nom]="nombre" [ap]="apellido" [tel]="telefono"> </app-tarea>
 </div> -->
+
+<!-- 
+    arregloNumero = [4,5,6, ... ]
+   For(int i=0 ; i < arregloNumero.length; i ++) {
+    numero_arreglo = arregloNumero[i]
+   <h4> {{numero_arreglo}} </h4>
+}-->
+
+<!-- <h4 *ngFor="let numeros_arreglo of arregloNumeros">{{ numeros_arreglo }}</h4> -->
+
+<!-- 
+    arregloNuevo = [Joel, Joaquin, Isa]
+    For(int = 0 ; i < arregloNuevo.length; i ++){
+      nombres_arreglo = arregloNuevo[i]
+      <h4> {{nombres_arreglo}} </h4>
+    }
+}-->
+
+<!-- <h4 *ngFor="let nombres_arreglo of arregloNuevo">{{ nombres_arreglo }}</h4> -->
