--- a/src/app/pelicula/pelicula.component.html
+++ b/src/app/pelicula/pelicula.component.html
@@ -1,25 +1,29 @@
 <div class="formulario">
-     <label for="np">nombre:</label>
-     <input id="np" name="np" type="text" [(ngModel)]="nombre">
-     <br>
-     <br>
-     <label for="genero">genero:</label>
-     <input id="genero" name="genero" type="text" [(ngModel)]="genero">
-     <br>
-     <br>
-     <label for="anio">año:</label>
-     <input id="anio" name="anio" type="number" [(ngModel)]="anio"><br>
-     <br>
-     <label for="imagen">imagen:</label>
-     <input id="imagen" name="imagen" type="text" [(ngModel)]="imagen">
-     <br>
-     <br>
-     <button (click)="agregar()">Agregar</button>
-
-
-
-
-
-
+  <label for="np">nombre:</label>
+  <input id="np" name="np" type="text" [(ngModel)]="nombre" />
+  <br />
+  <br />
+  <label for="genero">genero:</label>
+  <input id="genero" name="genero" type="text" [(ngModel)]="genero" />
+  <br />
+  <br />
+  <label for="anio">año:</label>
+  <input id="anio" name="anio" type="number" [(ngModel)]="anio" /><br />
+  <br />
+  <label for="imagen">imagen:</label>
+  <input id="imagen" name="imagen" type="text" [(ngModel)]="imagen" />
+  <br />
+  <br />
+  <button (click)="agregar()">Agregar</button>
 </div>
 
+<div fxLayout="row" fxLayoutAlign="space-between">
+  <app-vista-pelicula
+    *ngFor="let elemento_arreglo of vector_pelicula"
+    [nombre_entrada]="elemento_arreglo.nom"
+    [genero_entrada]="elemento_arreglo.gen"
+    [anio_entrada]="elemento_arreglo.an"
+    [imagen_entrada]="elemento_arreglo.imag"
+  >
+  </app-vista-pelicula>
+</div>
