--- a/src/app/pelicula/pelicula.component.css
+++ b/src/app/pelicula/pelicula.component.css
@@ -6,3 +6,15 @@
   text-align: center;
   border: black 2px solid;
 }
+
+.example-form {
+  background-color: lightskyblue;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+  border: black 2px solid;
+}
+
+.example-full-width {
+  width: 100%;
+}
