--- a/src/app/vista-pelicula/vista-pelicula.component.css
+++ b/src/app/vista-pelicula/vista-pelicula.component.css
@@ -11,3 +11,12 @@
 .negrita {
   font-weight: bold;
 }
+
+.example-card {
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-size: cover;
+}
