--- a/src/app/pelicula/pelicula.component.css
+++ b/src/app/pelicula/pelicula.component.css
@@ -8,11 +8,17 @@
 }
 
 .example-form {
-  background-color: lightskyblue;
   min-width: 150px;
-  max-width: 500px;
+  max-width: 250px;
   width: 100%;
   border: black 2px solid;
+  text-align: center;
+  margin-left: 15px;
+  margin-top: 15px;
+}
+.separacion {
+  margin: 10px;
+  padding: 10px;
 }
 
 .example-full-width {
