--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-pelicula></app-pelicula>
+
+    <mat-toolbar>
+      <a mat-button routerLink="" class="separacion" >pelicula</a>
+      <a mat-button  routerLink="seccion1" class="separacion" >seccion1</a>
+    </mat-toolbar>
+
+    <router-outlet>  </router-outlet>
+
