comenzamos a utiliar servicios

--- a/src/app/pelicula/pelicula.component.html
+++ b/src/app/pelicula/pelicula.component.html
@@ -22,7 +22,7 @@
   <button mat-raised-button color="primary" (click)="agregar()">agregar</button>
 </form>
 
-<div fxLayout="column" *ngFor="let elemento_arreglo of vector_pelicula">
+<!-- <div fxLayout="column" *ngFor="let elemento_arreglo of vector_pelicula">
   <app-vista-pelicula
     class="separacion"
     [nombre_entrada]="elemento_arreglo.nom"
@@ -33,4 +33,4 @@
   </app-vista-pelicula>
 </div>
 
-<br />
+<br /> -->
