--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
+<mat-toolbar>
+  <a mat-button routerLink="" class="separacion">Home</a>
+  <a mat-button routerLink="seccion1" class="separacion">Contacto</a>
+  <a mat-button routerLink="s2" class="separacion">Sobre Nosotros</a>
+  <a mat-button routerLink="vistapelicula" class="separacion"
+    >Peliculas Agregadas</a
+  >
+</mat-toolbar>
 
-    <mat-toolbar>
-      <a mat-button routerLink="" class="separacion" >pelicula</a>
-      <a mat-button  routerLink="seccion1" class="separacion" >seccion1</a>
-    </mat-toolbar>
-
-    <router-outlet>  </router-outlet>
-
+<router-outlet> </router-outlet>
