muestra pelicula desde servicio, falta arreglar para cuando me muevo entre componentes

--- a/src/app/vista-pelicula/vista-pelicula.component.html
+++ b/src/app/vista-pelicula/vista-pelicula.component.html
@@ -8,12 +8,14 @@
   <br />
 </div> -->
 
+<div fxLayout="column" *ngFor="let tarjeta_pelicula of vectorPelicula">
 <mat-card class="example-card">
   <mat-card-header>
-    <mat-card-title>{{ nombre_entrada }}</mat-card-title>
+    <mat-card-title>{{ tarjeta_pelicula.nom }}</mat-card-title>
     <mat-card-subtitle
-      >{{ genero_entrada }} , {{ anio_entrada }}
+      >{{tarjeta_pelicula.gen }} , {{tarjeta_pelicula.an}}
     </mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image [src]="imagen_entrada" alt="imagen Pelicula" />
+ <img mat-card-image [src]="tarjeta_pelicula.imag" alt="imagen Pelicula" />
 </mat-card>
+</div>
