hacemos el nuevo servicio para pasajero y agregamos validadores

--- a/src/app/pelicula/pelicula.component.html
+++ b/src/app/pelicula/pelicula.component.html
@@ -60,13 +60,13 @@
   <br />
   <mat-form-field>
     <mat-label>mail:</mat-label>
-    <input matInput formControlName="mail" name="mail" />
+    <input matInput formControlName="mail" name="mail"  />
     <mat-error>Complete el mail</mat-error>
   </mat-form-field>
 <br>
   <mat-form-field>
     <mat-label>edad:</mat-label>
-    <input matInput formControlName="edad" name="edad" />
+    <input matInput formControlName="edad" name="edad" type="number" min="1" max="120" />
     <mat-error>Complete la edad</mat-error>
   </mat-form-field>
 
@@ -120,3 +120,4 @@
 </div>
 
 <br /> -->
+
