--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
   <a mat-button routerLink="vistapelicula" class="separacion"
     >Peliculas Agregadas</a
   >
+  <a mat-button routerLink="vistapasajero" class="separacion"
+    >Pasajeros Agregados</a
+  >
 </mat-toolbar>
 
 <router-outlet> </router-outlet>
