--- a/src/app/vista-pasajero/vista-pasajero.component.html
+++ b/src/app/vista-pasajero/vista-pasajero.component.html
@@ -1,9 +1,9 @@
-<div
+<!--<div
   class="separacion"
   fxLayout="column"
   *ngFor="let tarjeta_pasajero of vectorPasajero"
 >
-  <mat-card class="example-card">
+   <mat-card class="example-card">
     <mat-card-header>
       <mat-card-title
         >{{ tarjeta_pasajero.nom }}, {{ tarjeta_pasajero.ape }}</mat-card-title
@@ -26,4 +26,64 @@
       </mat-card-subtitle>
     </mat-card-header>
   </mat-card>
-</div>
+ </div> -->
+<table mat-table [dataSource]="vectorPasajero" class="mat-elevation-z8">
+  <!--- Note that these columns can be defined in any order.
+      The actual rendered columns are set as a property on the row definition" -->
+
+  <!--  Columna nombre -->
+  <ng-container matColumnDef="nombre">
+    <th mat-header-cell *matHeaderCellDef>Nombre Completo</th>
+    <td mat-cell *matCellDef="let tarjeta_pasajero">
+      {{ tarjeta_pasajero.nom }} {{ tarjeta_pasajero.ape }}
+    </td>
+  </ng-container>
+
+  <!--  Columna dni -->
+  <ng-container matColumnDef="dni">
+    <th mat-header-cell *matHeaderCellDef>DNI</th>
+    <td mat-cell *matCellDef="let tarjeta_pasajero">
+      {{ tarjeta_pasajero.dni }}
+    </td>
+  </ng-container>
+
+  <!--  Columna edad -->
+  <ng-container matColumnDef="edad">
+    <th mat-header-cell *matHeaderCellDef>Edad</th>
+    <td mat-cell *matCellDef="let tarjeta_pasajero">
+      {{ tarjeta_pasajero.edad }}
+    </td>
+  </ng-container>
+
+  <!--  Columna email -->
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let tarjeta_pasajero">
+      {{ tarjeta_pasajero.mail }}
+    </td>
+  </ng-container>
+  <!--  Columna tel -->
+  <ng-container matColumnDef="tel">
+    <th mat-header-cell *matHeaderCellDef>Tel</th>
+    <td mat-cell *matCellDef="let tarjeta_pasajero">
+      {{ tarjeta_pasajero.tel }}
+    </td>
+  </ng-container>
+  <!--  Columna Genero -->
+  <ng-container matColumnDef="gen">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let tarjeta_pasajero">
+      {{ tarjeta_pasajero.gen }}
+      <!--  Columna Fecha Nacimiento -->
+      <ng-container matColumnDef="fdn">
+        <th mat-header-cell *matHeaderCellDef>Fecha Nac.</th>
+        <td mat-cell *matCellDef="let tarjeta_pasajero">
+          {{ tarjeta_pasajero.fdn }}
+        </td>
+      </ng-container>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
