creamos ruta para usuario y comenzamos a hacer las columnas para mostrar los usuarios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,15 @@
   <a mat-button routerLink="s2" class="separacion">Sobre Nosotros</a>
   <a mat-button routerLink="vistapelicula" class="separacion"
     >Peliculas Agregadas</a
-  >
+   >
   <a mat-button routerLink="vistapasajero" class="separacion"
     >Pasajeros Agregados</a
+    
   >
+
+  <a mat-button routerLink="usuarios" class="separacion"
+    >Usuarios</a
+   >
 </mat-toolbar>
 
 <router-outlet> </router-outlet>
