--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,42 +1,40 @@
-<table mat-table [dataSource]="arregloUsuarios" >
-    <!--- Note that these columns can be defined in any order.
+<!-- En el dataSource va el arreglo de donde queremos que saque los datos 
+   Cada elemento que compone el arreglo representa una fila en mi tabla -->
+
+<table mat-table [dataSource]="arregloUsuarios">
+  <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
-  
-    <!--  Columna nombre -->
-    <ng-container matColumnDef="nombre">
-      <th mat-header-cell *matHeaderCellDef>Nombre Completo</th>
-      <td mat-cell *matCellDef="let usuario">
-        nombre ejemplo
-      </td>
-    </ng-container>
 
-     <!--  Columna Email  -->
-     <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let usuario">
-        email ejemplo
-        </td>
-      </ng-container>
+  <!--  Columna nombre -->
+  <!-- matColumnDef es un identificador para la columna, me sirve para 
+    mostrar la columna agregando el indentificador al arrelgo de columnas_a_mostrar -->
+  <ng-container matColumnDef="nombre">
+    <!-- Titulo a mostrar en la columna -->
+    <th mat-header-cell *matHeaderCellDef>Nombre Completo</th>
+    <!-- Dato que va ir en esta columna por cada fila  -->
+    <td mat-cell *matCellDef="let usuario">{{ usuario.name }}</td>
+  </ng-container>
 
-       <!--  Columna Genero -->
-    <ng-container matColumnDef="genero">
-        <th mat-header-cell *matHeaderCellDef>Genero</th>
-        <td mat-cell *matCellDef="let usuario">
-          genero ejemplo
-        </td>
-      </ng-container>
+  <!--  Columna Email  -->
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let usuario">{{ usuario.email }}</td>
+  </ng-container>
 
-       <!--  Columna nombre -->
-    <ng-container matColumnDef="estado">
-        <th mat-header-cell *matHeaderCellDef>Estado</th>
-        <td mat-cell *matCellDef="let usuario">
-          estado ejemplo
-        </td>
-      </ng-container>
-  
-   
-  
-    <tr mat-header-row *matHeaderRowDef="columnas_a_mostrar"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnas_a_mostrar"></tr>
-  </table>
-  
+  <!--  Columna Genero -->
+  <ng-container matColumnDef="genero">
+    <th mat-header-cell *matHeaderCellDef>Genero</th>
+    <td mat-cell *matCellDef="let usuario">{{ usuario.gender }}</td>
+  </ng-container>
+
+  <!--  Columna nombre -->
+  <ng-container matColumnDef="estado">
+    <th mat-header-cell *matHeaderCellDef>Estado</th>
+    <td mat-cell *matCellDef="let usuario">{{ usuario.status }}</td>
+  </ng-container>
+
+  <!-- muestras las columnas que estan en el arreglo columnas_a_mostrar -->
+  <tr mat-header-row *matHeaderRowDef="columnas_a_mostrar"></tr>
+  <!--  -->
+  <tr mat-row *matRowDef="let row; columns: columnas_a_mostrar"></tr>
+</table>
