--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -6,6 +6,7 @@
     placeholder="id del usuario"
   />
   <button (click)="buscarUsuario()">Buscar</button>
+  <button (click)="eliminarUsuario()">Eliminar</button>
 </div>
 
 <!-- En el dataSource va el arreglo de donde queremos que saque los datos 
