conectamos con las base de datos e hicimos que se muestren los productos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,8 @@
   <a mat-button routerLink="usuarios" class="separacion"
     >Usuarios</a
    >
+   <a mat-button routerLink="productos" class="separacion"
+   >Productos</a>
 </mat-toolbar>
 
 <router-outlet> </router-outlet>
