--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,1 +1,38 @@
-<p>productos works!</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div
+  class="separacion"
+  fxLayout="column"
+  *ngFor="let tarjeta_producto of arregloProductos"
+>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>{{ tarjeta_producto.name }}</mat-card-title>
+      <mat-card-subtitle
+        >{{ tarjeta_producto.id }} , {{ tarjeta_producto.description }} , {{ tarjeta_producto.price }}
+      </mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="tarjeta_producto.image" alt="imagen Productos" width="100px" height="100px" />
+  </mat-card>
+</div>
+
