hicimos los pasos 4 y 5 de posteos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
    >
    <a mat-button routerLink="productos" class="separacion"
    >Productos</a>
+
+   <a mat-button routerLink="posteos" class="separacion"
+   >posteos</a>
 </mat-toolbar>
 
 <router-outlet> </router-outlet>
